--- a/lorify/package.json
+++ b/lorify/package.json
@@ -18,11 +18,12 @@
     "tsparticles": "^3.9.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
