Final UI + Model Edits_

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_GEMINI_API_KEY='AIzaSyDjC5CCImhj4a8PYtOLQZ6IY33cT27xbOA'
+ELEVENLABS_API_KEY='sk_99469384f66b0db7b488bdbe2b737cb84bf44e22bc66f128'
