--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@tsparticles/engine": "^3.0.0",
     "@tsparticles/react": "^3.0.0",
     "clsx": "^2.0.0",
-    "next": "14.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-merge": "^2.0.0"
+    "next": "^14.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@next/swc-win32-x64-msvc": "^15.5.4",
